        Implement flux(), eflux() and mc() for GModelSpectralFunc
        Add GLog output methods to Python interface
        Add append() and append_standard() methods to GPars
        Protect parfile read/write by a file lock
        LM optimizer frees any internally fixed parameter at exit
        Add row and column manipulation methods for FITS tables

2011-07-20  Juergen Knoedlseder  <knodlseder@cesr.fr>

        * Version 0.4.10 released
        =========================

        Improve configuration script
        Minor bug fixes

2011-07-09  Juergen Knoedlseder  <knodlseder@cesr.fr>

        * Version 0.4.9 released
        ========================

        Implement wcslib adaption for GWcs classes
        Added AZP, STG, and TAN WCS projections
        Add simple offset angle dependence of CTA response
        Does not require pkg-config anymore
        Add NaN/Inf check in various places (--enable-nan-check)
        Test for presence of Python.h

2011-02-24  Juergen Knoedlseder  <knodlseder@cesr.fr>

        * Version 0.4.7 released
        ========================

        Fix memory leaks in container classes handling pointers
        Add more example scripts

2011-02-21  Juergen Knoedlseder  <knodlseder@cesr.fr>

        * Version 0.4.6 released
        ========================

        Add support for extended source models
        Implement CTA binned and unbinned support for extended source models
        Update GEvents, GObservation and GResponse interfaces
        Use operator[] for element access
        Strict usage of C++ headers
        Add Doxygen and man support (make doxygen; make doxygen-install)
        Add html documentation

2011-02-02  Juergen Knoedlseder  <knodlseder@cesr.fr>

        * Version 0.4.5 released
        ========================

        Implement CTA radial acceptance model
        Generalize model class
        Generation of Python bindings no longer requires swig